# dist-api

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md
.claude/agents/: judge.md  spec-writer.md
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/conformance/fixtures/queries/actions/sync/: get_user_by_email_nested_success.yaml
crates/conformance/fixtures/queries/security/: column_hidden_secret_pin.yaml  forge_owner_column_rejected.yaml  idor_aggregate_no_leak.yaml  idor_by_pk_other.yaml  idor_delete_other.yaml  idor_list_only_own.yaml  idor_neq_filter_bypass.yaml  idor_nin_filter_bypass.yaml  idor_or_filter_bypass.yaml  idor_update_by_pk_other.yaml  idor_update_other.yaml  idor_via_relationship.yaml  idor_where_other_owner.yaml  insert_memo_other_account_denied.yaml  insert_preset_forces_owner.yaml  missing_session_var.yaml  setup.yaml  sqli_insert_value_literal.yaml  sqli_like_injection.yaml  sqli_quotes_and_backslash.yaml  sqli_session_var.yaml  sqli_stacked_in_list.yaml  sqli_where_string_literal.yaml  table_hidden_audit_log.yaml  teardown.yaml
crates/conformance/tests/: actions.rs  agg_relay_introspection.rs  auth_env.rs  graphql_mutations.rs  graphql_queries.rs  roles_inheritance.rs  security.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  loader.rs  types.rs
crates/metadata/tests/: load_fixture.rs
crates/metadata/tests/fixtures/metadata/databases/default/tables/: public_article.yaml  public_author.yaml  tables.yaml
crates/schema/: Cargo.toml
crates/schema/src/: introspection.rs  lib.rs  naming.rs  plan.rs  plan_mutation.rs  predicate.rs  v1.rs
crates/server/: Cargo.toml
crates/server/src/: gql.rs  jwt.rs  main.rs  ops.rs  remote.rs  remote_validate.rs  state.rs  ws.rs
crates/sqlgen/: Cargo.toml
crates/sqlgen/src/: lib.rs
crates/sqlgen/tests/: escaping.rs  pipeline.rs
crates/sqlgen/tests/snapshots/: pipeline__aggregate_with_count_and_nodes.snap  pipeline__aliases_typename_and_fragments.snap  pipeline__array_relationship_with_args.snap  pipeline__by_pk_lookup.snap  pipeline__object_relationship.snap  pipeline__relationship_predicate_in_where.snap  pipeline__select_with_where_order_limit.snap  pipeline__simple_select_with_permission_filter.snap
examples/petshop/: README.md  docker-compose.yml
examples/petshop/migrations/: V1__create_category.sql  V2__create_pet.sql  V3__create_customer.sql  V4__create_orders.sql  V5__create_order_item.sql
knowledgebase/: _index.md
knowledgebase/_templates/: decision.md  feature-dossier.md
knowledgebase/embedded-sdk/: _index.md  embedding-options.md  ffi-boundary.md  hooks-and-events.md  performance.md  precedents.md  research-findings.md  research-report.json  wasm-compiler-core.md
knowledgebase/embedded-sdk/decisions/: 001-webhooks-first-transport-agnostic-sdk.md  002-keep-durable-journal-alongside-in-memory-hooks.md  003-never-embed-go-runtime-in-node.md  004-defer-embedded-sdk-until-conformance.md  005-wasm-compiler-core-over-cgo-or-go-rewrite.md
tests/hasura/: COVERAGE.md  README.md  run_suite.sh  triage.py
