[workspace]
resolver = "2"
members = [
    "crates/metadata",
    "crates/catalog",
    "crates/schema",
    "crates/ir",
    "crates/sqlgen",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order: Hasura's tests assert response key order matches the
# GraphQL selection set, so Value must keep insertion order.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
graphql-parser = "0.4"
insta = { version = "1", features = ["yaml"] }
base64 = "0.22"
jsonwebtoken = "9"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
