[package]
name = "dist-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hasura v2-compatible metadata: types and YAML directory loader (!include support)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
